--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     padding: 1em;
     border-radius: 3em;
     border: .5em solid  whitesmoke;
+    margin-bottom: .5rem;
 }
 h1, p {
     border-radius: 1em;
